1. 临时抱拂脚

--- a/text.html
+++ b/text.html
@@ -5,7 +5,14 @@
     <title>Title</title>
 </head>
 <body>
-    <div>你好    <span style="color: blue">我是</span>    鹿</div>
-
+<form>
+    <p>选择你的兴趣：</p>
+    <input type="checkbox" id="sports" name="interest" value="sports">
+    <label for="sports">体育</label><br>
+    <input type="checkbox" id="music" name="interest" value="music">
+    <label for="music">音乐</label><br>
+    <input type="checkbox" id="books" name="interest" value="books">
+    <label for="books">读书</label>
+</form>
 </body>
 </html>
